--- a/docs/SequentialDecisionMaking/ref.bib
+++ b/docs/SequentialDecisionMaking/ref.bib
@@ -18,6 +18,15 @@
 	isbn={9783540542216}
 }
 
+@book{axsaeter2006inventory,
+	title={Inventory Control},
+	author={Axsater, Sven},
+	year={2006},
+	publisher={Springer},
+	address={New York},
+	isbn={9780387243096}
+}
+
 
 @book{lavalle2006,
 	author    = {I. Lavalle},
