--- a/docs/SequentialDecisionMaking/document.tex
+++ b/docs/SequentialDecisionMaking/document.tex
@@ -126,7 +126,7 @@
 	To provide an example of implementation (see source code on Github) and test equation \eqref{eq:per} on an anecdotal level, consider the case where $N_0=37$, $L =6$ and $U_j\in \mathbb{Z}$, $0\leq U_j\leq 0$ for any time step. Data are mocked from a Poisson distribution with rate parameter $\lambda =3$. $300$ random samples are drawn to represent a mock time series, with the last $52$ reserved as test data and the remaining as training data. Based on the training data, the $\lambda$ is estimated using MLE and based on a Poisson distribution with this estimated rate parameter, a forecast of dimensions (number\_of\_samples, forecast\_horizon), with number\_of\_samples=$5\,000$ and forecast\_horizon=$52$, is drawn. The optimal and baseline policies applied to yield decision over the forecast horizon. Using these decisions, the actual costs are computed using the test data. This is done $5\,000$ times to yield an estimate of the PER for a particular $h,c$. This process is repeated for $c\in \mathbb{Z}$, $1\leq c\leq 100$ and $h\in \mathbb{Z}$, $1\leq c\leq 20$, yielding the PERs shown in figure \ref{fig:heatmap_numerical}. Figure \ref{fig:heatmap_numerical} clearly show the same pattern as figure \ref{fig:heatmap_analytical}, however, with slight differences (as expected for an approximation); i) the maximum slightly exceeds $1$ and ii) the minimum significantly deviates from $0$. The former is likely due to random fluctuations from approximating the expected cost from $5\, 000$ samples. Increasing the sample size gradually brings the maximum closer to $1$. 
 	
 	========= TO THIS POINT ==========
-	{\color{red} The latter? Is it an artefact, or due to numerical limitations? In the upper limit inaccuracy seems to be $\sim 0.04$. In the lower limit we have $\sim 0.2$...}
+	{\color{red} The latter? Is it an artefact, or due to numerical limitations? In the upper limit inaccuracy seems to be $\sim 0.04$. In the lower limit we have $\sim 0.2$... It can be inaccuracies of the approximation. I have defined the scale of the approximation based on deduction. Perhaps this is not perfectly accurate?}
 	
 
 	
