--- a/docs/SequentialDecisionMaking/document.tex
+++ b/docs/SequentialDecisionMaking/document.tex
@@ -5,6 +5,7 @@
 \usepackage{graphicx} % For figures
 \usepackage{hyperref} % For links
 \usepackage{appendix} % For appendices
+\usepackage{amssymb}
 \usepackage [round,authoryear] {natbib}
 
 \DeclareMathOperator*{\argmax}{argmax}
