--- a/docs/SequentialDecisionMaking/document.tex
+++ b/docs/SequentialDecisionMaking/document.tex
@@ -47,49 +47,64 @@
 	In this study, Bayesian decision theory is utilized to address a sequential inventory control problem. Specifically, an optimal decision-making framework is derived based on a discounted asymmetric cost function, considering the impact of decisions made infinitely far into the future. Our model involves a decision-maker (henceforth referred to as the Robot) who manages stock levels over time in an interactive environment shaped by a random demand process. Through this setup, a mathematically rigorous and computationally feasible solution for optimal inventory decisions that account for uncertainty and asymmetric costs is derived.
 	
 	\section{Sequential Decision-Making Framework}
-	To formalize the sequential decision-making problem, consider a stock management scenario in which the Robot makes decisions at each time step, interacting with an entity termed Nature, which represents environmental randomness~\citep{lavalle2006}. At each iteration $t$, the Robot decides on an action from its action space $\Omega_U$, while Nature removes a certain number of units from stock, denoted $s_t \in \Omega_S$. The goal is to manage the stock optimally, balancing the costs of overstocking ($N > 0$) and understocking ($N < 0$), given that each action taken has a probabilistic effect on the Robot’s objectives.
+	To formalize the sequential decision-making problem, consider a stock management scenario in which the Robot is set in a game against an entity termed Nature, which represents environmental randomness~\citep{lavalle2006}. In this game the Robot and Nature each have to make a decision, $u\in \Omega_U\subset \mathbb{Z}_{\geq 0}$ and $s\in \Omega_S\subset \mathbb{Z}_{\geq 0}$ respectively, for each time step $t\in [1,T]$ into the future. 
+	\begin{definition}[Stock level]
+		\label{def:stock}
+		Given an initial stock $N_0$, the stock level at time $t$ evolves according to
+		\begin{equation}
+			\begin{split}
+				N_t &\equiv N_0 + \sum_{t'=1}^{t} (u_{t'-L} - s_{t'})\\
+				& = N_0+\upsilon_t-\zeta_t
+			\end{split},
+		\end{equation}
+		where $u_{t'-L}$ represents the decision made at an earlier time due to a potential lag $L$ and $\zeta_t\equiv \sum_{t'=1}^ts_{t'}$ and $\upsilon_t\equiv \sum_{t'=1}^tu_{t'-L}$. To support probabilistic decision-making, the Robot uses a probabilistic forecast based on data $D$
+		\begin{equation}
+			p(s_1, s_2, \dots s_T| D, I),
+		\end{equation}
+		where $I$ denotes any additional background information~\citep{Sivia2006}.
+	\end{definition}
+
+	\begin{definition}[Discounted Cost]
+		\label{def:cost}
+		The Robot receives a numerical penalty, assigned by a cost function, depending on the decisions $\{u\}, \{s\}$ made over the forecast horizon. The cost $C$ is assumed to be discounted and is defined as
+		\begin{equation}
+			C = \sum_{t=1}^{T} \gamma_{\text{disc}}^{t-1} 
+			\left( h_t 1_{N_t > 0} + c_t (1_{N_t > 0} - 1) \right) N_t,
+			\label{eq:cost}
+		\end{equation}
+		where $\gamma_{\text{disc}} \in [0,1]$ is the discount factor, $h_t$ and $c_t$ represent 
+		storage (holding) and understocking costs at time $t$, respectively, and 
+		$1_{N_t > 0}$ is the indicator function that equals 1 when $N_t > 0$ (see definition \ref{def:stock}) and $0$ otherwise.
+	\end{definition}
 	
-	The Robot’s decisions are based on historical data $D$, which contains past stock removals and other relevant demand features. Given an initial stock $N_0$, the stock level at time $t$ evolves according to
-	\begin{equation}
-		\begin{split}
-			N_t &\equiv N_0 + \sum_{t'=1}^{t} (U_{t'-L} - s_{t'})\\
-			& = N_0+\upsilon_t-\zeta_t
-		\end{split},
-	\end{equation}
-	where $U_{t'-L}$ represents the decision made at an earlier time due to a potential lag $L$ and $\zeta_t\equiv \sum_{t'=1}^ts_{t'}$ and $\upsilon_t\equiv \sum_{t'=1}^tU_{t'-L}$. To support probabilistic decision-making, the Robot uses a forecast based on $D$ in the form
-	\begin{equation}
-		p(s_1, s_2, \dots | D, I),
-	\end{equation}
-	where $I$ denotes any additional background information~\citep{Sivia2006}. This probabilistic forecast, combined with the Robot's asymmetric cost function, guides the sequence of decisions over time.
-	
-	\section{Formulation of the Cost Function and Optimal Policy}
-	The Robot’s objective is to formulate a sequence of decision rules, called a policy, $\xi = \{U_0(D), U_1(D), \dots\}$, where each $U_j(D) = u_j$ minimizes the expected cost
-	\begin{equation}
-		\xi^* = \arg \min_{\xi} \mathbb{E}[C | D, I],
-	\end{equation}
-	where the cost $C$ is assumed to be discounted viz
-	\begin{equation}
-		C = \sum_{t=1}^{\infty} \gamma_{\text{disc}}^{t} \left( h_t 1_{N_t> 0} + c_t (1_{N_t> 0}-1) \right)N_t,
-		\label{eq:cost}
-	\end{equation}
-	where $\gamma_{\text{disc}} \in [0,1]$ is a discount factor, and $h$ and $c$ represent storage (holding) and understocking costs, respectively. The optimal decisions satisfy the first-order condition
-	\begin{equation}
-		\frac{d}{dU_m} \mathbb{E}[C | D, I] \Big|_{U_m = U_m^*} \overset{!}{=} 0 \quad \forall m,
-		\label{eq:min_exp_cost}
-	\end{equation}
-	which leads to the optimal decision criterion (see Appendix~\ref{app:deriva} for derivation).
-	
+	\begin{definition}[Optimal Policy]
+		\label{def:policy}
+		Given the data $D$, the Robot’s objective is to formulate a sequence of decision rules, called a policy, $\pi = \{U_0(D)=u_0, U_1(D)=u_1, \dots\}$, where each $U_j(D) = u_j$ minimizes the expected cost (definition \ref{def:cost})
+		\begin{equation}
+			\pi^* = \arg \min_{\pi} \mathbb{E}[C| D, I]
+		\end{equation}
+		over the probability distribution of definition \ref{def:stock}. The optimal decisions rules satisfy the first- and second-order conditions
+		\begin{equation}
+			\begin{split}
+				\frac{d}{dU_m} \mathbb{E}[C | D, I] \Big|_{U_m = U_m^*} &= 0 \quad \forall m,\\
+				\frac{d^2}{dU_m^2} \mathbb{E}[C | D, I] \Big|_{U_m = U_m^*} & > 0 \quad \forall m.
+			\end{split}
+			\label{eq:min_exp_cost}
+		\end{equation}
+	\end{definition}
+
 	\begin{theorem}[Optimal Policy Rule for Inventory Control]
 		\label{theorem:opt_policy}
-		Given the sequential decision-making framework and the asymmetric cost function in equation \eqref{eq:cost}, the optimal policy for the Robot at each time step $t$ is defined by
+		Given the sequential decision-making framework and the asymmetric cost function of definition \ref{def:cost}, the optimal policy for the Robot at each time step $t$ is defined by (see appendix \ref{app:deriva} for derivation)
 		\begin{equation}
 			p(N_t^* > 0 | D, I) = \frac{c_t}{c_t + h_t},
 			\label{eq:t1}
 		\end{equation}
 		where
 		\begin{equation}
-			N_t^* = N_0 +\upsilon_t^*-\zeta_t.
+			N_t^* = N_0 +\upsilon_t^*-\zeta_t,
 		\end{equation}
+		$\zeta_t-\zeta_{t-1}\geq 0$ and $\upsilon_t-\upsilon_{t-1}\geq 0$ by definition. However, if $N_0 +\upsilon_{t-1}> \zeta_t$, the optimal decision is $\upsilon_t^* = 0$. In this case, the condition in equation \eqref{eq:t1} is not strictly satisfied, as $p(N_t^* > 0 | D, I)$ becomes irrelevant due to the sufficient inventory at time $t$.
 	\end{theorem}
 	
 	
@@ -97,56 +112,62 @@
 	Equation \eqref{eq:t1} can be written
 	\begin{equation}
 		\begin{split}
-			p(N_t^* > 0 | D, I) &= \sum_{s_1,\dots s_t}1_{N_{t}\geq 0}p(s_1,\dots s_t|D,I)\sum_{s_{t+1},\dots}p(s_{t+1},\dots|s_1,\dots s_t,D,I)\\
-			& = \sum_{\zeta_t=0}^{N_0+\Upsilon_t}p(\zeta_t|D,I)\sum_{s_{t+1},\dots}p(s_{t+1},\dots|\zeta_t,D,I)\\
+			p(N_t^* > 0 | D, I) &= \sum_{s_1,\dots s_t}1_{N_{t}\geq 0}p(s_1,\dots s_t|D,I)\sum_{s_{t+1},\dots s_T}p(s_{t+1},\dots s_T|s_1,\dots s_t,D,I)\\
+			& = \sum_{\zeta_t=0}^{N_0+\upsilon_t}p(\zeta_t|D,I)\sum_{s_{t+1},\dots s_T}p(s_{t+1},\dots s_T|\zeta_t,D,I)\\
 		\end{split}
 	\end{equation}
-	Assuming conditional independence $p(s_{t+1},\dots|\zeta_t,D,I)=p(s_{t+1},\dots|D,I)$
+	Assuming conditional independence $p(s_{t+1},\dots s_T|\zeta_t,D,I)=p(s_{t+1},\dots s_T|D,I)$
 	\begin{equation}
 			p(N_t^* > 0 | D, I)  = \sum_{\zeta_t=0}^{N_0+\upsilon_t}p(\zeta_t|D,I).
 			\label{eq:indep}
 	\end{equation}
 	Combining eqation \eqref{eq:indep} with theorem \ref{theorem:opt_policy} implies that the optimal policy is related to quantiles of $\zeta_t$ viz
 	\begin{equation}
-		\upsilon_t^* = Q_{\frac{c_t}{c_t+h_t}}\zeta_t-N_0,
+		\upsilon_t^* = \max(\text{round}(\mathcal{Q}_{\frac{c_t}{c_t+h_t}}\zeta_t-N_0),0),
 		\label{eq:opt}
 	\end{equation}
-	where $Q_q(X)$ denotes the $q$-quantile of the random variable $X$. 
+	where $\mathcal{Q}_q(X)$ denotes the $q$-quantile of the random variable $X$ and the rounding ensures the decisions belong to $\Omega_U\subset \mathbb{Z}_{\geq 0}$. 
 	
 	\subsection{Policy Efficiency Ratio}
 	In order to gauge the effect of using the optimal policy (equation \eqref{eq:opt}), the associated expected cost is compared to the expected cost associated to a baseline policy via the policy efficiency ratio (PER)
 	\begin{equation}
-		\text{PER}\equiv \frac{\mathbb{E}[C^*|D,I]}{\mathbb{E}[C'|D,I]},
+		\text{PER}\equiv \frac{\mathbb{E}[C|D,I]|_{\pi=\pi^*}}{\mathbb{E}[C|D,I]|_{\pi=\pi'}},
 		\label{eq:per_def}
 	\end{equation}
-	where $C^*$ is the cost function with the optimal policy and $C'$ is the baseline policy defined viz
+	where $\pi^*$ is the optimal policy (theorem \ref{theorem:opt_policy}) and $\pi'$ is the baseline policy (definition \ref{def:baseline}).
 	
-	\begin{definition}[baseline policy]
-		The baseline policy consists of ordering the expected value $\mathbb{E}[s_t|D,I]$ if $N_t<\mathbb{E}[s_t|D,I]$.
+	\begin{definition}[Baseline Policy]  
+		\label{def:baseline}
+		The baseline policy is an $(R, Q)$ inventory policy~\citep{bartmann1992inventory,axsaeter2006inventory}, where the reorder point $R$ determines when to reorder, and the batch quantity, $Q$, is based on the expected demand. Under this policy, the order quantity is determined by the expected demand, $\mathbb{E}[s_t|D, I]$, adjusted to bring the stock level up to the reorder point $R$
+		\begin{equation}  
+			\upsilon_t' = \max(\text{round}(\mathbb{E}[\zeta_t|D, I] + R - N_0), 0).  
+		\end{equation}  
+		The rounding ensures the order quantity is an integer, and the maximum function prevents negative orders.
 	\end{definition}
+
 	
-	The baseline policy represents an (R,Q) policy~\citep{bartmann1992inventory,axsaeter2006inventory} with the reorder point $N_t=0$ and batch quantity $\mathbb{E}[s_t|D,I]$. This policy is a simple approach to keeping the stock as close as possible to the reorder point while favoring a positive stock. Assuming i) $p(\zeta_t|D,I)$ follows a Poisson distribution, ii) $k_t=k,c_t=c$ are constant and conditional independence, the PER can be approximated (see appendix \ref{app:cer} for derivation) viz
-	
-	========= to this point ===========
-	
-	
-	{\color{red} I have limits now, rather than a general result. Investigate both limits numerically to validate results.}
-	
+	\subsubsection{Scaling relations}
+	In general the PER is a function of $R, c_t, h_t, N_0$ as well as the distribution (and its details) of $\zeta_t$. Assuming i) $p(\zeta_t|D,I)$ follows a Poisson distribution and ii) conditional independence, the expected cost can be written (see appendix \ref{app:expected_cost})
 	\begin{equation}
-		\frac{\mathbb{E}[C^*|D,I] }{\mathbb{E}[C'|D,I]}\approx \frac{4}{2+\frac{h}{c}+\frac{c}{h}}.
+		\begin{split}
+			\mathbb{E}[C|D,I] = \sum_{t=1}^{T} \gamma_{\text{disc}}^{t-1} \bigg(& 
+			(h_t+c_t)(N_0 + \upsilon_t)\frac{\Gamma(N_0+\upsilon_t+1,\lambda_t)}{\Gamma(N_0+\upsilon_t+1)}\\&- (h_h+c_t)\lambda_t \frac{\Gamma(N_0+\upsilon_t,\lambda_t)}{\Gamma(N_0+\upsilon_t)}\\
+			&- c_t(N_0 + \upsilon_t-\lambda_t)\bigg).
+		\end{split}
+	\end{equation}
+	where $\Gamma$ is the gamma function and $\lambda_t=\mathbb{E}[\zeta_t|D, I]$ is the expected value of the Poisson distribution. Under further loose approximations specified in appendix \ref{label}, the PER can be approximated viz
+	\begin{equation}
+		\begin{split}
+			\text{PER}|_{R\sim 0} & \sim \frac{4}{2+\frac{h}{c}+\frac{c}{h}},\\
+			\text{PER}|_{R\gg 0} &\sim \frac{L-1}{T-1}+\frac{1}{R(1+\frac{h}{c})}.
+		\end{split}
 		\label{eq:per}
 	\end{equation}
+	Several things can be noted from \eqref{eq:per}, including: i) the PER is a function of $r\equiv \frac{c}{h}$, ii) the scaling according to $r$ is inverted for $R\sim 0$ and $R\gg 0$ and iii) the PER approach a constant value for $R\rightarrow \infty$.
 	
 	
 	
 	
-	Equation \eqref{eq:per} provides a rule of thumb to gauge the expected cost reduction by using the optimal policy (equation \eqref{eq:opt}) over a conventional approach. In typical industrial settings $c\gg h$ and so the expected reduction in cost will be modest, however, possibly still significant depending on the scale and elements included in the cost model. Figure \ref{fig:heatmap_analytical} show the PER (equation \eqref{eq:per}) plotted as a function of $h,c$.
-	\begin{figure}[h!]
-		\centering
-		\includegraphics[width=\textwidth]{figures/analytical_per.pdf}
-		\caption{Heatmap of the analytical policy efficiency ratio (equation \eqref{eq:per}).}
-		\label{fig:heatmap_analytical}
-	\end{figure}
 	
 	
 	\subsubsection{Example: Numerical Policy Efficiency Ratio}
@@ -171,32 +192,15 @@
 	\section{Conclusion}
 	The derived decision rule offers a structured approach to managing inventory in a stochastic environment using Bayesian decision theory. The probabilistic framework accounts for demand uncertainty, guiding optimal actions based on expected costs. This work contributes to the field of inventory management by presenting an analytically derived solution, supporting practical applications in real-world inventory systems.
 	
-	\begin{enumerate}
-		\item A few words on the intuitive interpretation of the cost function? The number of units overstocked multiplied with the cost of overstocking per unit. The number of units understocked multiplied with the value of each unit. The latter represents the lost value.
-		\item Mention the benefit of the analytical solution; the computation speed relative to a numerical optimization is highly beneficial at scale.
-		\item Compress the recursive relation to $m$-notation. 
-		\item The baseline policy is an (R,Q) policy with $R =0$ and $Q = \mathbb{E}[s_t|D,I]$.
-		\item Is our result in any of the inventory control books?
-		\item will the relationship between baseline and optimal policy depend on forecasting method? I would say yes. How do we handle this?
-		
-		\item if there is around the same cost for over/under stocking, there is a $30-40\%$ reduction in costs with the optimal policy compared to the baseline. In the limit of $c\gg h$, the reduction in cost approach $0\%$ and the gains are minor. This is the relevant limit in most cases, where the value of the unit significantly outweigh the holding cost. This is relevant, however, it is underlined, that the baseline policy is always equal or worse (statistically, meaning the expected cost is always lower. Expected cost is over a distribution. draws from that distribution can fall either way) than the optimal policy. 
-		
-		\item PER is highly dependent on the policy. If the reference level is moved away from $N_t =0$, for example, the plot completely changes and the blue area shifts to the top left corner.
-	\end{enumerate}
 	
-	\begin{enumerate}
-		\item \href{https://www.academia.edu/27965536/Inventorycontroltextbook_140429044831_phpapp02_1_}{S. Axsäter. Inventory control}
-		\item \href{https://proceedings.mlr.press/v151/kan22a/kan22a.pdf}{Gasthaus paper}
-		\item \href{https://arxiv.org/pdf/2012.02392}{inspiration for introduction}
-		\item \href{https://arxiv.org/pdf/2310.17168}{probabilistic trucks}
-		\item \href{https://arxiv.org/pdf/2310.16096}{Amazon paper} (inspiration)
-	\end{enumerate}
 	
 	\newpage
 	\begin{appendices}
 		\input{chapters/app_deriv.tex}
 		\input{chapters/app_expected_cost.tex}
+		\input{chapters/app_analytical_per.tex}
 		\input{chapters/app_poisson.tex}
+		\input{chapters/app_notes.tex}
 	\end{appendices}
 	
 	
